--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,11 @@
 
 :root {
-    --buttonColor: #28a745;
+    --buttonColor: #000000;
     --bodyColor: #333;
     --bodyBGcolor: #f5f5f5;
     --headerBGcolor: white;
     --actionBGcolor: #28a745;
-    --deleteBGcolor: #ff6c6c;
+    --deleteBGcolor: #c3c3c3;
     --titleFont: 1.2em Arial, sans-serif;
     --subtitleFont: 1.5em Arial, sans-serif;
 }
@@ -281,7 +281,7 @@ body {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 12px;
     padding: 4px;
     border-radius: 4px;
     transition: background-color 0.2s;
