--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ body {
 
 .header h1 {
     color: #2c3e50;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
 }
 
 .trip-title {
@@ -67,13 +67,14 @@ body {
     background-color: #f8f9fa;
     border-radius: 4px;
     padding: 2px 4px;
-    margin: 3px -4px 8px -4px;
+    margin-left: -4px;
+    /* margin: 3px -4px 8px -4px; */
 }
 
 .timezone-info {
     font-size: 12px;
     color: #888;
-    margin-top: 8px;
+    margin-top: 15px;
     font-style: italic;
 }
 
