--- a/public/style.css
+++ b/public/style.css
@@ -593,7 +593,7 @@ body {
 .render-content .section-header {
     font-size: 1.3em;
     font-weight: bold;
-    margin: 15px 0 10px 0;
+    margin: 2em 0 10px 0;
     color: #555;
     border-bottom: 1px solid #eee;
     padding-bottom: 5px;
@@ -613,7 +613,7 @@ body {
     /* margin: 3px 0; */
 }
 
-.render-content .trip-duration, .render-content .destination-duration {
+.render-content .trip-duration {
     font-weight: bold;
     color: #777;
     margin-left: .5em
@@ -629,14 +629,14 @@ body {
 .render-content .leg-departure,
 .render-content .leg-arrival {
     font-family: 'Courier New', monospace;
-    /* margin: 2px 0; */
+    margin-left: .5em;
     color: #000;
 }
 
 .render-content .leg-duration {
     font-style: italic;
     color: #999;
-    margin: 0 0 5px .5em;
+    margin: 0 0 5px .75em;
     font-size: .9em;
 }
 
@@ -649,20 +649,22 @@ body {
 .render-content .destination-header {
     font-weight: bold;
     color: #333;
-    margin: 10px 0 0 0;
+    margin-top: 1.2em;
 }
 
 .render-content .destination-duration {
-    font-weight: bold;
+    font-size: .9em;
+    /* font-weight: bold; */
     color: #999;
-    margin-bottom: 5px;
+    /* margin-left: 1em; */
+    margin-bottom: .2em;
 }
 
 .render-content .destination-arrival,
 .render-content .destination-departure {
     font-family: 'Courier New', monospace;
-    /* margin: 2px 0; */
     color: #000;
+    margin-left: .5em;
 }
 
 .render-content .daily-breakdown {
